src/test/ui/issues/issue-72554.stderr
error[E0072]: recursive type `ElemDerived` has infinite size
  --> $DIR/issue-72554.rs:4:1
   |
LL | pub enum ElemDerived {
   | ^^^^^^^^^^^^^^^^^^^^ recursive type has infinite size
LL |     A(ElemDerived)
   |       ----------- recursive without indirection
   |
   = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `ElemDerived` representable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
